--- a/app/src/main/res/layout/activity_profile_fragment_merge_input.xml
+++ b/app/src/main/res/layout/activity_profile_fragment_merge_input.xml
@@ -70,8 +70,7 @@
             <TextView
                 android:id="@+id/txtMhr"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:layout_height="wrap_content" />
         </TableRow>
     </TableLayout>
 </merge>
