--- a/app/src/main/res/layout/activity_profile_listitem.xml
+++ b/app/src/main/res/layout/activity_profile_listitem.xml
@@ -80,8 +80,7 @@
             <TextView
                 android:id="@+id/txtMhr"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center" />
+                android:layout_height="match_parent" />
         </TableRow>
     </TableLayout>
 </RelativeLayout>
