--- a/app/src/main/res/layout/activity_height_main.xml
+++ b/app/src/main/res/layout/activity_height_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codeflowcrafter.FitnessTracker.RepMax.Activity_RepMax_Main">
+    tools:context="com.codeflowcrafter.FitnessTracker.Height.Activity_Height_Main">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
