--- a/app/src/main/res/layout/activity_weeklyprogram_main.xml
+++ b/app/src/main/res/layout/activity_weeklyprogram_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codeflowcrafter.FitnessTracker.WeeklyProgram.Activity_Main">
+    tools:context="com.codeflowcrafter.FitnessTracker.Program.Activity_Program_Main">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
