--- a/app/src/main/res/layout/activity_profile_fragment_merge_input.xml
+++ b/app/src/main/res/layout/activity_profile_fragment_merge_input.xml
@@ -65,9 +65,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
-
             <TextView
                 android:id="@+id/txtMhr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </TableRow>
+        <TableRow
+            android:padding="5dp"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+            <TextView
+                android:text="Height:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <EditText
+                android:id="@+id/txtFeet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number" />
+            <TextView
+                android:text="ft."
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+            <EditText
+                android:id="@+id/txtInches"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number" />
+            <TextView
+                android:text="in."
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </TableRow>
