--- a/app/src/main/res/layout/activity_exercise_main.xml
+++ b/app/src/main/res/layout/activity_exercise_main.xml
@@ -33,14 +33,14 @@
             android:layout_height="wrap_content"
             android:text="Add Exercise"
             tools:text="Add Exercise" />
-
         <fragment
+            android:name="android.app.ListFragment"
+            tools:layout="@layout/activity_exercise_listitem"
             android:id="@+id/fragment_exerciseList"
-            android:name="com.codeflowcrafter.FitnessTracker.Exercise.Activity_Exercise_Fragment_List"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="bottom"
-            tools:layout="@layout/activity_exercise_listitem" />
+             />
     </TableLayout>
 
 </android.support.design.widget.CoordinatorLayout>
