--- a/app/src/main/res/layout/activity_exercise_merge_input.xml
+++ b/app/src/main/res/layout/activity_exercise_merge_input.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
             <TextView
-                android:text="Duration:"
+                android:text="Duration (Min.):"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
