--- a/app/src/main/res/layout/activity_bmi_fragment_read_add_edit.xml
+++ b/app/src/main/res/layout/activity_bmi_fragment_read_add_edit.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</android.support.constraint.ConstraintLayout>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    >
+    <TableRow
+        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content">
+        <include layout="@layout/activity_bmi_merge_input"/>
+    </TableRow>
+    <TableRow
+        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content">
+        <fragment
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:name="com.codeflowcrafter.UI.Persistency.Fragment_SaveCancel"
+            android:id="@+id/saveCancelFragmentPlaceholder"
+            android:gravity="bottom"
+            tools:layout="@layout/fragment_savecancel_layout" />
+    </TableRow>
+</TableLayout>
