--- a/app/src/main/res/layout/activity_bmi_merge_input.xml
+++ b/app/src/main/res/layout/activity_bmi_merge_input.xml
@@ -37,6 +37,30 @@
                 android:layout_height="wrap_content"
                 />
         </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Ideal Weight: "
+                />
+            <TextView
+                android:id="@+id/txtIdealWeight"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Weight to Lose: "
+                />
+            <TextView
+                android:id="@+id/txtIdealWeightToLose"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/holo_red_dark" />
+        </TableRow>
         <TableRow
             android:padding="5dp"
             android:layout_height="wrap_content"
@@ -52,11 +76,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+
             <TextView
                 android:id="@+id/txtClassification"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:textColor="@color/colorPrimaryDark" />
         </TableRow>
     </TableLayout>
 </merge>
