--- a/app/src/main/res/layout/merge_height.xml
+++ b/app/src/main/res/layout/merge_height.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <TextView
-        android:text="Height:"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="Height:" />
+
     <EditText
         android:id="@+id/txtFeet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:width="25dp"
         android:inputType="number" />
+
     <TextView
-        android:text="ft."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="ft." />
+
     <EditText
         android:id="@+id/txtInches"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:width="25dp"
         android:inputType="number" />
+
     <TextView
-        android:text="in."
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="in." />
 </merge>
