--- a/app/src/main/res/layout/activity_rhr_listitem.xml
+++ b/app/src/main/res/layout/activity_rhr_listitem.xml
@@ -1,23 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
     <Button
+        android:id="@+id/btnRhrMenu"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/btnHeartRateMenu"
         android:text="@string/label_ellipses"
         android:layout_alignParentRight="true"
         />
     <TextView
+        android:id="@+id/txtRhrId"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:fadingEdge="vertical"
         android:padding="10dp"
-        android:id="@+id/heartRateId"
-        android:layout_toLeftOf="@id/btnHeartRateMenu"
+        android:layout_toLeftOf="@id/btnRhrMenu"
         android:visibility="invisible"
         />
     <TableLayout
@@ -25,30 +26,18 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_toLeftOf="@+id/heartRateId"
+        android:layout_toLeftOf="@+id/txtRhrId"
         android:stretchColumns="0,1">
         <TableRow>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Exer. Name: "
+                android:text="Date: "
                 />
             <TextView
+                android:id="@+id/txtDate"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Treadmill"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Type: "
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Car. | Strengt."
                 />
         </TableRow>
         <TableRow>
@@ -57,48 +46,25 @@
                 android:layout_height="match_parent"
                 android:text="MHR: "
                 />
+            <TextView
+                android:id="@+id/txtMhr"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Resting Heart Rate: "
+                />
 
             <TextView
+                android:id="@+id/txtRhr"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="30" />
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Intensity of Exercise: "
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Light/Mode/Vigo"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Rate: "
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="100 (1 min.)"
-                />
-        </TableRow>
-        <TableRow>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Type: "
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Resting Recovery Manual"
-                />
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark" />
         </TableRow>
     </TableLayout>
 </RelativeLayout>
