--- a/app/src/main/res/layout/activity_bmr_merge_input.xml
+++ b/app/src/main/res/layout/activity_bmr_merge_input.xml
@@ -13,7 +13,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
-            <EditText
+            <TextView
                 android:id="@+id/txtDate"
                 android:hint="Date"
                 android:layout_width="wrap_content"
@@ -59,17 +59,12 @@
             android:padding="5dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
+
             <TextView
-                android:text="Date of Birth:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
-            <TextView
-                android:id="@+id/txtDateOfBirth"
-                android:hint="Date of Birth"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                android:text="Age:" />
+
             <TextView
                 android:id="@+id/txtAge"
                 android:layout_width="wrap_content"
@@ -87,14 +82,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="15dp"
-                android:text="Level of Activity" />
+                android:text="Level of Activity (per week)" />
+
         </TableRow>
 
         <TableRow
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="35dp">
-
             <Spinner
                 android:id="@+id/spinLevelOfActivity"
                 android:layout_width="match_parent"
