Added BMI score

--- a/app/src/main/res/layout/activity_bmi_listitem.xml
+++ b/app/src/main/res/layout/activity_bmi_listitem.xml
@@ -53,6 +53,21 @@
                 />
         </TableRow>
         <TableRow>
+            <include layout="@layout/merge_height"/>
+        </TableRow>
+        <TableRow>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="BMI: "
+                />
+            <TextView
+                android:id="@+id/txtBmi"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+        </TableRow>
+        <TableRow>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -75,9 +90,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textColor="@android:color/holo_red_dark" />
-        </TableRow>
-        <TableRow>
-            <include layout="@layout/merge_height"/>
         </TableRow>
         <TableRow>
             <TextView
