--- a/app/src/main/res/layout/activity_bmr_listitem.xml
+++ b/app/src/main/res/layout/activity_bmr_listitem.xml
@@ -77,7 +77,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Number of calories needed\nto maintain your weight: " />
+                android:text="Daily calories needed\nto maintain your weight: " />
 
             <TextView
                 android:id="@+id/txtDailyCalories"
