--- a/app/src/main/res/layout/activity_bmr_merge_input.xml
+++ b/app/src/main/res/layout/activity_bmr_merge_input.xml
@@ -114,7 +114,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingTop="15dp"
-                android:text="Number of calories needed\nto maintain your weight" />
+                android:text="Daily calories needed\nto maintain your weight" />
 
             <TextView
                 android:id="@+id/txtTotalCalories"
