--- a/app/src/main/res/layout/activity_ehr_merge_input.xml
+++ b/app/src/main/res/layout/activity_ehr_merge_input.xml
@@ -63,6 +63,21 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content">
             <TextView
+                android:text="Intensity:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/txtIntensity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark" />
+        </TableRow>
+        <TableRow
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content">
+            <TextView
                 android:text="Zone:"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,7 +86,8 @@
                 android:id="@+id/txtZone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center" />
+                android:gravity="center"
+                android:textColor="@color/colorPrimaryDark" />
         </TableRow>
         <TableRow>
             <TextView
