--- a/app/src/main/res/layout/activity_bmi_merge_input.xml
+++ b/app/src/main/res/layout/activity_bmi_merge_input.xml
@@ -29,13 +29,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+
             <EditText
                 android:id="@+id/txtWeight"
-                android:hint="Weight"
-                android:inputType="number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:hint="Weight"
+                android:inputType="numberDecimal" />
         </TableRow>
         <TableRow
             android:padding="5dp"
