--- a/app/src/main/res/layout/activity_repmax_main.xml
+++ b/app/src/main/res/layout/activity_repmax_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.codeflowcrafter.FitnessTracker.RepMax.Activity_Repmax_Main">
+    tools:context="com.codeflowcrafter.FitnessTracker.RepMax.Activity_RepMax_Main">
 
     <TableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
