--- a/app/src/main/res/layout/activity_repmax_fragment_read_add_edit.xml
+++ b/app/src/main/res/layout/activity_repmax_fragment_read_add_edit.xml
@@ -1,25 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     >
-    <TableRow
-        android:padding="5dp"
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
-        <include layout="@layout/activity_repmax_merge_input"/>
-    </TableRow>
-    <TableRow
-        android:padding="5dp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:name="com.codeflowcrafter.UI.Persistency.Fragment_SaveCancel"
-            android:id="@+id/saveCancelFragmentPlaceholder"
-            android:gravity="bottom"
-            tools:layout="@layout/fragment_savecancel_layout" />
-    </TableRow>
-</TableLayout>
+        android:paddingBottom="15dp">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+
+            <include layout="@layout/activity_repmax_merge_input" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+
+            <fragment
+                android:id="@+id/saveCancelFragmentPlaceholder"
+                android:name="com.codeflowcrafter.UI.Persistency.Fragment_SaveCancel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="bottom"
+                tools:layout="@layout/fragment_savecancel_layout" />
+        </TableRow>
+    </TableLayout>
+
+    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <TableRow
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp">
+
+            <include layout="@layout/activity_repmax_merge_workout" />
+        </TableRow>
+    </TableLayout>
+</LinearLayout>
