--- a/app/src/main/res/layout/activity_repmax_listitem.xml
+++ b/app/src/main/res/layout/activity_repmax_listitem.xml
@@ -72,7 +72,7 @@
                 android:text="Repititions: "
                 />
             <TextView
-                android:id="@+id/txtRepititions"
+                android:id="@+id/txtRepetitions"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"/>
